# mindGlide

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  Dockerfile_large  Dockerfile_noenvironment  Dockerfile_old  LICENSE  README  README.md  build_docker_script.sh  build_singularity.sh  ensemble_utils.py  infer_ensemble.sh  infer_ensemble_from_container.sh  labels.csv  mindGlide.def  pyproject.toml  requirements.in  requirements.txt  run_inference.py
.github/workflows/: docker-image.yml  docker_push.yml
inference/mindglide/: consts.py  infer.py  network.py  transforms.py  volumes.py
inference/mindglide.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mindGlide/: ensemble_utils.py  fine_tuning.py  run_inference.py  task_params.py
mindGlide/config/: task_params.py
models/: _20240404_conjurer_trained_dice_7733.pt  model_0_net_key_metric=0.7627.pt  model_2_net_key_metric=0.7541.pt  model_2_net_key_metric=0.7579.pt  model_3_net_key_metric=0.7713.pt  model_3_net_key_metric=0.7717.pt  model_4_net_key_metric=0.7645.pt  model_5_net_key_metric=0.7866.pt  model_6_net_key_metric=0.7723.pt  model_7_net_key_metric=0.7634.pt  model_8_net_key_metric=0.7489.pt  model_9_net_key_metric=0.7738.pt
scripts/: entrypoint.sh  fine_tune.sh  fine_tune_from_container.sh  fine_tune_with_singularity.sh  infer_ensemble.sh  infer_ensemble_from_container.sh
